Added ability to run as many alignment iterations as you want

--- a/src/pipeline/notebooks/manual_alignment.ipynb
+++ b/src/pipeline/notebooks/manual_alignment.ipynb
@@ -15,7 +15,7 @@
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "PIPELINE_ROOT =  Path().resolve().parent\n",
+    "PIPELINE_ROOT =  Path().resolve().parent.parent\n",
     "sys.path.append(PIPELINE_ROOT.as_posix())"
    ]
   },
@@ -25,17 +25,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from image_manipulation.pipeline_process import Pipeline\n",
-    "from image_manipulation.elastix_manager import create_downsampled_transforms\n",
-    "from utilities.utilities_registration import (\n",
+    "from library.image_manipulation.pipeline_process import Pipeline\n",
+    "from library.image_manipulation.elastix_manager import create_downsampled_transforms\n",
+    "from library.utilities.utilities_registration import (\n",
     "    parameters_to_rigid_transform,\n",
     "    rigid_transform_to_parmeters,\n",
     ")\n",
-    "from settings import data_path, host, password, user, schema\n",
+    "#from settings import host, password, user, schema\n",
     "channel = 1\n",
     "downsample = True\n",
     "tg = False\n",
-    "debug = False"
+    "debug = False\n",
+    "rescan_number = 0\n",
+    "task = 'align'"
    ]
   },
   {
@@ -48,18 +50,20 @@
     "    \n",
     "    def __init__(self, animal, moving_index):\n",
     "        #animal, channel, downsample, data_path, tg, debug\n",
-    "        super().__init__(animal, channel, downsample, data_path, tg, debug)\n",
-    "        sectioni = moving_index\n",
+    "        #animal, rescan_number, channel, downsample, tg, debug, task):\n",
+    "\n",
+    "        super().__init__(animal, rescan_number, channel, downsample, tg, debug, task)\n",
+    "        self.sections = self.sqlController.get_sections(self.animal, self.channel, rescan_number)\n",
+    "        section = moving_index\n",
+    "        self.midpoint = len(self.sections) // 2\n",
     "        self.moving_index = moving_index\n",
     "        self.fixed_index = moving_index - 1\n",
-    "        INPUT = self.fileLocationManager.get_thumbnail_cleaned(self.channel)\n",
+    "        INPUT = os.path.join(self.fileLocationManager.prep, 'CH1', 'thumbnail_aligned_iteration_0')\n",
     "        self.moving_file = os.path.join(INPUT, f'{str(moving_index).zfill(3)}.tif')\n",
     "        self.fixed_file = os.path.join(INPUT, f'{str(self.fixed_index).zfill(3)}.tif')\n",
     "        self.moving = tiff.imread(self.moving_file)\n",
     "        self.fixed = tiff.imread(self.fixed_file)\n",
-    "        self.sections = self.sqlController.get_sections(self.animal, self.channel)\n",
     "        self.transformation_to_previous_sec = self.get_transformation_to_previous_section()\n",
-    "        self.midpoint = len(self.sections) // 2\n",
     "        self.center = self.get_rotation_center()\n",
     "        \n",
     "    def transform_image(self,img,T):\n",
@@ -88,8 +92,8 @@
     "        transformation_to_previous_sec = {}\n",
     "        center = self.get_rotation_center()\n",
     "        for i in range(1, len(self.sections)):\n",
-    "            rotation, xshift, yshift = self.load_elastix_transformation(self.animal, i, iteration=0)\n",
-    "            T = self.parameters_to_rigid_transform(rotation, xshift, yshift, center)\n",
+    "            rotation, xshift, yshift = self.load_elastix_transformation(self.animal, i, iteration=1)\n",
+    "            T = parameters_to_rigid_transform(rotation, xshift, yshift, center)\n",
     "            transformation_to_previous_sec[i] = T\n",
     "        return transformation_to_previous_sec\n",
     "\n",
@@ -147,9 +151,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prep_id = 'DK52'\n",
-    "section = 87\n",
-    "aligner = ManualAligner(prep_id, section)"
+    "prep_id = 'CTB004'\n",
+    "section = 106\n",
+    "aligner = ManualAligner(prep_id, section)\n",
+    "print(f'fixed index={aligner.fixed_index}')\n",
+    "print(f'moving index={aligner.moving_index}')"
    ]
   },
   {
@@ -176,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotation, xshift, yshift = aligner.load_elastix_transformation(aligner.animal, aligner.moving_index, iteration=0)\n",
+    "rotation, xshift, yshift = aligner.load_elastix_transformation(aligner.animal, aligner.moving_index, iteration=1)\n",
     "section = str(aligner.moving_index).zfill(3)\n",
     "print(f'fixed index = {aligner.fixed_index}')\n",
     "print(f'moving index/section = {aligner.moving_index}')\n",
@@ -196,14 +202,14 @@
     "## increasing x moves the red image to the right.\n",
     "## increasing y moves the red image down\n",
     "## The red image is the previous image (fixed image)\n",
-    "rotation = 0.1\n",
-    "xshift = -20\n",
-    "yshift = 40\n",
+    "rotation = 0.000236907\n",
+    "xshift = -4.65016\n",
+    "yshift = 1000\n",
     "T1 = aligner.get_transformation_of_sectioni(aligner.moving_index)\n",
     "#T2 = aligner.get_transformation_of_sectioni(aligner.fixed_index)\n",
     "T2 = aligner.get_modified_transformation_of_sectioni(aligner.fixed_index, rotation, xshift, yshift)\n",
     "aligner.evalulate_transformation(aligner.moving, aligner.fixed, T1, T2)\n",
-    "title = f'Section {section} on {prep_id} rotation={rotation}, xshift={xshift}, yshift={yshift}'\n",
+    "title = f'Moving blue section {section} on {prep_id} rotation={rotation}, xshift={xshift}, yshift={yshift}'\n",
     "plt.title(title);"
    ]
   },
@@ -213,9 +219,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = f'UPDATE elastix_transformation SET rotation={rotation}, xshift={xshift}, yshift={yshift} \\\n",
-    "     WHERE section = \\'{section}\\' and prep_id = \\'{prep_id}\\' and iteration=0 LIMIT 1'\n",
-    "print(sql)"
+    "print(f'section={section}')\n",
+    "fig, ax = plt.subplots(1,2)\n",
+    "fig.set_figheight(15)\n",
+    "fig.set_figwidth(15)\n",
+    "ax[0].grid()\n",
+    "ax[1].grid()\n",
+    "ax[0].title.set_text(f'fixed {aligner.fixed_index}')\n",
+    "ax[1].title.set_text(f'moving {aligner.moving_index}')\n",
+    "ax[0].imshow(aligner.fixed, cmap=\"gray\")\n",
+    "ax[1].imshow(aligner.moving, cmap=\"gray\")"
    ]
   },
   {
@@ -224,10 +237,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#aligner.sqlController.delete_elastix_row(aligner.animal, section)\n",
-    "#aligner.sqlController.add_elastix_row(aligner.animal, section, rotation, xshift, yshift)\n",
-    "\n",
-    "print(f'row with section={aligner.moving_index} updated')"
+    "sql = f'UPDATE elastix_transformation SET rotation={rotation}, xshift={xshift}, yshift={yshift} \\\n",
+    "     \\nWHERE section = \\'{section}\\' and FK_prep_id = \\'{prep_id}\\' and iteration=1 \\nLIMIT 1'\n",
+    "print(sql)"
    ]
   }
  ],
@@ -247,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
