Added a script to manually align sections with points

--- a/src/pipeline/notebooks/manual_alignment.ipynb
+++ b/src/pipeline/notebooks/manual_alignment.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = f'UPDATE elastix_transformation SET rotation={rotation}, xshift={xshift}, yshift={yshift} WHERE section=\\'{aligner.fixed_index}\\' and FK_prep_id=\\'{prep_id}\\';'\n",
+    "sql = f'UPDATE elastix_transformation SET rotation={rotation}, xshift={xshift}, yshift={yshift} WHERE section=\\'{aligner.moving_index}\\' and FK_prep_id=\\'{prep_id}\\';'\n",
     "print(sql)"
    ]
   }
