--- a/src/pipeline/notebooks/load_n_save_gimpfiles.ipynb
+++ b/src/pipeline/notebooks/load_n_save_gimpfiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4892eb0d",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animal = 'DK52'\n",
+    "animal = 'DK101'\n",
     "DIR = f'/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/{animal}/preps'\n",
     "INPUT = os.path.join(DIR, 'CH1', 'thumbnail_cleaned')"
    ]
@@ -84,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
