Switch from copy to symlink in brain stitcher move process

--- a/src/pipeline/notebooks/parse_lifecanvas.ipynb
+++ b/src/pipeline/notebooks/parse_lifecanvas.ipynb
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f7c4106",
+   "id": "7c0829ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "596804dc",
+   "id": "3cbd0466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5789cd7",
+   "id": "37fcaeb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c0f67f0",
+   "id": "260bff5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d31e6bb",
+   "id": "032d0ecb",
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +374,28 @@
     "max_layer = max([int(layer) for layer in sorted(os.listdir(base_path))])\n",
     "outfile = 'layers.1-' + str(max_layer)  + '.tif'\n",
     "print(outfile)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7a1b4387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = '/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/DK20230126-003/preps/C1/layers/00005/h5/00060_00089.h5'\n",
+    "input_path = '/net/birdstore/Vessel/WBIM/Acquisition/LifeCanvas/003_20240209/00005/Scan/00060_00089/00000/tile.h5'\n",
+    "relative_input_path = os.path.relpath(input_path, os.path.dirname(output_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "44d95343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.symlink(input_path, output_path)"
    ]
   }
  ],
