Got stitcher working as well as can be expected

--- a/src/pipeline/notebooks/parse_lifecanvas.ipynb
+++ b/src/pipeline/notebooks/parse_lifecanvas.ipynb
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71ac3d2",
+   "id": "96478ff8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5586de9b",
+   "id": "bd55f870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "170a568c",
+   "id": "4463c57a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15071e1f",
+   "id": "8946c7a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a9aa371",
+   "id": "86ceef89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d221a4b1",
+   "id": "9e57197e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "241142bf",
+   "id": "c2cdb264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,10 +486,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fe749173",
+   "id": "a056a344",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8 µs, sys: 4 µs, total: 12 µs\n",
+      "Wall time: 16 µs\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "fullpath = '/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/DK20230126-003/preps'\n",
     "apath = os.path.join(fullpath, 'a.zarr')\n",
     "bpath = os.path.join(fullpath, 'b.zarr')"
@@ -497,155 +507,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7e0f99a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[493, 292, 673,  80],\n",
-       "        [160,  35,  64, 621],\n",
-       "        [852, 825, 946, 107]],\n",
-       "\n",
-       "       [[292, 422, 787, 113],\n",
-       "        [337, 661, 675, 449],\n",
-       "        [760, 158, 475, 880]]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r = np.random.randint(1000, size=(2,3,4))\n",
-    "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f3cbc1dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 3, 4)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9fe0e605",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = zarr.create(shape=(250, 200, 400), chunks=(1, 64, 64), dtype='int', store=apath)\n",
-    "a[:] = np.random.randint(1000, size=a.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "1bfdd0f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 9.58 ms, sys: 600 µs, total: 10.2 ms\n",
-      "Wall time: 9.54 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time _ = a[1, :, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "82cd5dcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = zarr.create(shape=(250, 200, 400), chunks=True, dtype='int', store=apath)\n",
-    "a[:] = np.random.randint(1000, size=a.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "b5674212",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 22.9 ms, sys: 0 ns, total: 22.9 ms\n",
-      "Wall time: 21.8 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time _ = a[1, :, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "70046709",
+   "execution_count": 38,
+   "id": "353a914c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table class=\"zarr-info\"><tbody><tr><th style=\"text-align: left\">Type</th><td style=\"text-align: left\">zarr.core.Array</td></tr><tr><th style=\"text-align: left\">Data type</th><td style=\"text-align: left\">int64</td></tr><tr><th style=\"text-align: left\">Shape</th><td style=\"text-align: left\">(250, 200, 400)</td></tr><tr><th style=\"text-align: left\">Chunk shape</th><td style=\"text-align: left\">(32, 50, 100)</td></tr><tr><th style=\"text-align: left\">Order</th><td style=\"text-align: left\">C</td></tr><tr><th style=\"text-align: left\">Read-only</th><td style=\"text-align: left\">False</td></tr><tr><th style=\"text-align: left\">Compressor</th><td style=\"text-align: left\">Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)</td></tr><tr><th style=\"text-align: left\">Store type</th><td style=\"text-align: left\">zarr.storage.DirectoryStore</td></tr><tr><th style=\"text-align: left\">No. bytes</th><td style=\"text-align: left\">160000000 (152.6M)</td></tr><tr><th style=\"text-align: left\">No. bytes stored</th><td style=\"text-align: left\">32096399 (30.6M)</td></tr><tr><th style=\"text-align: left\">Storage ratio</th><td style=\"text-align: left\">5.0</td></tr><tr><th style=\"text-align: left\">Chunks initialized</th><td style=\"text-align: left\">128/128</td></tr></tbody></table>"
+       "<table class=\"zarr-info\"><tbody><tr><th style=\"text-align: left\">Type</th><td style=\"text-align: left\">zarr.core.Array</td></tr><tr><th style=\"text-align: left\">Data type</th><td style=\"text-align: left\">uint16</td></tr><tr><th style=\"text-align: left\">Shape</th><td style=\"text-align: left\">(250, 4490, 10666)</td></tr><tr><th style=\"text-align: left\">Chunk shape</th><td style=\"text-align: left\">(250, 1536, 1024)</td></tr><tr><th style=\"text-align: left\">Order</th><td style=\"text-align: left\">C</td></tr><tr><th style=\"text-align: left\">Read-only</th><td style=\"text-align: left\">False</td></tr><tr><th style=\"text-align: left\">Compressor</th><td style=\"text-align: left\">Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)</td></tr><tr><th style=\"text-align: left\">Store type</th><td style=\"text-align: left\">zarr.storage.DirectoryStore</td></tr><tr><th style=\"text-align: left\">No. bytes</th><td style=\"text-align: left\">23945170000 (22.3G)</td></tr><tr><th style=\"text-align: left\">No. bytes stored</th><td style=\"text-align: left\">370</td></tr><tr><th style=\"text-align: left\">Storage ratio</th><td style=\"text-align: left\">64716675.7</td></tr><tr><th style=\"text-align: left\">Chunks initialized</th><td style=\"text-align: left\">0/33</td></tr></tbody></table>"
       ],
       "text/plain": [
        "Type               : zarr.core.Array\n",
-       "Data type          : int64\n",
-       "Shape              : (250, 200, 400)\n",
-       "Chunk shape        : (32, 50, 100)\n",
+       "Data type          : uint16\n",
+       "Shape              : (250, 4490, 10666)\n",
+       "Chunk shape        : (250, 1536, 1024)\n",
        "Order              : C\n",
        "Read-only          : False\n",
        "Compressor         : Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)\n",
        "Store type         : zarr.storage.DirectoryStore\n",
-       "No. bytes          : 160000000 (152.6M)\n",
-       "No. bytes stored   : 32096399 (30.6M)\n",
-       "Storage ratio      : 5.0\n",
-       "Chunks initialized : 128/128"
+       "No. bytes          : 23945170000 (22.3G)\n",
+       "No. bytes stored   : 370\n",
+       "Storage ratio      : 64716675.7\n",
+       "Chunks initialized : 0/33"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "tshape = [250, 1536, 1024]\n",
+    "tile_shape=np.array(tshape)\n",
+    "overlaps = np.array([0,0,0])\n",
+    "chunks = (tile_shape - overlaps).tolist()\n",
+    "a = zarr.create(shape=(250, 4490, 10666), chunks=chunks, dtype='uint16', store=apath, overwrite=True)\n",
     "a.info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c624935",
+   "execution_count": 7,
+   "id": "b5795538",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dtype('int64'), (250, 1536, 1024))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subvolume = np.random.randint(1000, size=tshape)\n",
+    "subvolume.dtype, subvolume.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5a85ee87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[250, 1536, 1024]\n",
+      "CPU times: user 10.8 s, sys: 5.77 s, total: 16.6 s\n",
+      "Wall time: 7min 36s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "print(chunks)\n",
+    "a[0:250,1475:3011,4819:5843] = subvolume\n",
+    "a[0:250,1475:3011,5783:6807] = subvolume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2a88084e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[31, 192, 128]\n",
+      "CPU times: user 5.35 s, sys: 1.58 s, total: 6.93 s\n",
+      "Wall time: 8.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "print(chunks)\n",
+    "a[0:250,1475:3011,4819:5843] = subvolume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b1b89444",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(64, 64, 64)\n",
+      "CPU times: user 8.46 s, sys: 3.33 s, total: 11.8 s\n",
+      "Wall time: 23 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "print(chunks)\n",
+    "a[0:250,1475:3011,4819:5843] = subvolume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "925ce5f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 153, 102]\n",
+      "CPU times: user 8.29 s, sys: 2.88 s, total: 11.2 s\n",
+      "Wall time: 17.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "print(chunks)\n",
+    "a[0:250,1475:3011,4819:5843] = subvolume"
+   ]
   }
  ],
  "metadata": {
