Added new masking method for 3dim MD brains

--- a/src/pipeline/notebooks/load_n_save_gimpfiles.ipynb
+++ b/src/pipeline/notebooks/load_n_save_gimpfiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4892eb0d",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import os\n",
     "import numpy as np\n",
     "from skimage import io\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import cv2"
    ]
   },
   {
@@ -20,9 +21,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animal = 'DK101'\n",
+    "animal = 'MD175'\n",
     "DIR = f'/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/{animal}/preps'\n",
-    "INPUT = os.path.join(DIR, 'CH1', 'thumbnail_cleaned')"
+    "INPUT = os.path.join(DIR, 'C1', 'thumbnail')\n",
+    "file = '001.tif'\n",
+    "infile = os.path.join(INPUT, file)\n",
+    "maskfile = os.path.join(DIR, 'masks/C1/thumbnail_masked', file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34978297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = io.imread(infile)\n",
+    "mask = io.imread(maskfile)\n",
+    "print('img',img.dtype, arr.shape)\n",
+    "print('mask',mask.dtype, mask.shape)"
    ]
   },
   {
