Put more debugging into alignment

--- a/src/pipeline/notebooks/parse_lifecanvas.ipynb
+++ b/src/pipeline/notebooks/parse_lifecanvas.ipynb
@@ -402,86 +402,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = '/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/DK20230126-003/preps/C1/layers/00005/h5/00060_00089.h5'\n",
-    "input_path = '/net/birdstore/Vessel/WBIM/Acquisition/LifeCanvas/003_20240209/00005/Scan/00060_00089/00000/tile.h5'\n",
-    "relative_input_path = os.path.relpath(input_path, os.path.dirname(output_path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96478ff8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "volume = np.zeros([25, 449, 1067]) * 255 \n",
-    "subvolumeA = np.ones([25, 154, 102]) * 50\n",
-    "subvolumeB = np.ones([25, 154, 102]) * 100\n",
-    "subvolumeC = np.ones([25, 154, 102]) * 150\n",
-    "subvolumeD = np.ones([25, 154, 102]) * 200\n",
-    "print(volume.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd55f870",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "volume[0:25,147:301,192:294]  = subvolumeA\n",
-    "volume[0:25,147:301,288:390]  = subvolumeB\n",
-    "volume[0:25,147:301,385:487]  = subvolumeC\n",
-    "volume[0:25,147:301,481:583] = subvolumeD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f5cf7bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.rcParams[\"figure.figsize\"] = [14, 10]\n",
-    "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.imshow(volume[0,:,:], cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aafc0cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# max(tmp_stitch_data(start_row:end_row, start_col:end_col, start_z:end_z), tmp_tile_data);\n",
-    "x = np.maximum(volume[0:25,147:301,481:583], subvolumeD)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16e47324",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9ecbdab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.shape"
+    "h5path = '/net/birdstore/Vessel/WBIM/Acquisition/LifeCanvas/003_20240209/00005/Scan/00060_00089/00000/tile.h5'"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
