--- a/src/pipeline/notebooks/zarr_test.ipynb
+++ b/src/pipeline/notebooks/zarr_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4892eb0d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,10 @@
     "import json\n",
     "from pprint import pprint\n",
     "import math\n",
-    "import zarr"
+    "import zarr\n",
+    "from ome_zarr.io import parse_url\n",
+    "from ome_zarr.reader import Reader\n",
+    "import napari"
    ]
   },
   {
@@ -45,19 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a056a344",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 8 µs, sys: 4 µs, total: 12 µs\n",
-      "Wall time: 16 µs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "fullpath = '/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/DK20230126-003/preps'\n",
@@ -67,35 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "353a914c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"zarr-info\"><tbody><tr><th style=\"text-align: left\">Type</th><td style=\"text-align: left\">zarr.core.Array</td></tr><tr><th style=\"text-align: left\">Data type</th><td style=\"text-align: left\">uint16</td></tr><tr><th style=\"text-align: left\">Shape</th><td style=\"text-align: left\">(250, 4490, 10666)</td></tr><tr><th style=\"text-align: left\">Chunk shape</th><td style=\"text-align: left\">(250, 1536, 1024)</td></tr><tr><th style=\"text-align: left\">Order</th><td style=\"text-align: left\">C</td></tr><tr><th style=\"text-align: left\">Read-only</th><td style=\"text-align: left\">False</td></tr><tr><th style=\"text-align: left\">Compressor</th><td style=\"text-align: left\">Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)</td></tr><tr><th style=\"text-align: left\">Store type</th><td style=\"text-align: left\">zarr.storage.DirectoryStore</td></tr><tr><th style=\"text-align: left\">No. bytes</th><td style=\"text-align: left\">23945170000 (22.3G)</td></tr><tr><th style=\"text-align: left\">No. bytes stored</th><td style=\"text-align: left\">370</td></tr><tr><th style=\"text-align: left\">Storage ratio</th><td style=\"text-align: left\">64716675.7</td></tr><tr><th style=\"text-align: left\">Chunks initialized</th><td style=\"text-align: left\">0/33</td></tr></tbody></table>"
-      ],
-      "text/plain": [
-       "Type               : zarr.core.Array\n",
-       "Data type          : uint16\n",
-       "Shape              : (250, 4490, 10666)\n",
-       "Chunk shape        : (250, 1536, 1024)\n",
-       "Order              : C\n",
-       "Read-only          : False\n",
-       "Compressor         : Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)\n",
-       "Store type         : zarr.storage.DirectoryStore\n",
-       "No. bytes          : 23945170000 (22.3G)\n",
-       "No. bytes stored   : 370\n",
-       "Storage ratio      : 64716675.7\n",
-       "Chunks initialized : 0/33"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tshape = [250, 1536, 1024]\n",
     "tile_shape=np.array(tshape)\n",
@@ -107,21 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b5795538",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(dtype('int64'), (250, 1536, 1024))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subvolume = np.random.randint(1000, size=tshape)\n",
     "subvolume.dtype, subvolume.shape"
@@ -129,20 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "5a85ee87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[250, 1536, 1024]\n",
-      "CPU times: user 10.8 s, sys: 5.77 s, total: 16.6 s\n",
-      "Wall time: 7min 36s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "print(chunks)\n",
@@ -152,20 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "2a88084e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[31, 192, 128]\n",
-      "CPU times: user 5.35 s, sys: 1.58 s, total: 6.93 s\n",
-      "Wall time: 8.9 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "print(chunks)\n",
@@ -174,30 +112,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b1b89444",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(64, 64, 64)\n",
-      "CPU times: user 8.46 s, sys: 3.33 s, total: 11.8 s\n",
-      "Wall time: 23 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "print(chunks)\n",
     "a[0:250,1475:3011,4819:5843] = subvolume"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9384335e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.4/idr0062A/6001240.zarr\"\n",
+    "\n",
+    "# read the image data\n",
+    "store = parse_url(url, mode=\"r\").store\n",
+    "\n",
+    "reader = Reader(parse_url(url))\n",
+    "# nodes may include images, labels etc\n",
+    "nodes = list(reader())\n",
+    "# first node will be the image pixel data\n",
+    "image_node = nodes[0]\n",
+    "\n",
+    "dask_data = image_node.data\n",
+    "\n",
+    "# We can view this in napari\n",
+    "# NB: image axes are CZYX: split channels by C axis=0\n",
+    "viewer = napari.view_image(dask_data, channel_axis=0)\n",
+    "if __name__ == '__main__':\n",
+    "    napari.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7760de14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
