--- a/src/pipeline/notebooks/valis_test.ipynb
+++ b/src/pipeline/notebooks/valis_test.ipynb
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting images: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 479/479 [00:12<00:00, 38.89image/s]\n"
+      "Converting images: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:02<00:00, 19.80image/s]\n"
      ]
     },
     {
@@ -77,9 +77,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing images : 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 479/479 [00:31<00:00, 15.44image/s]\n",
-      "Normalizing images: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 479/479 [18:28<00:00,  2.31s/image]\n",
-      "Denoising images  : 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 479/479 [00:56<00:00,  8.54image/s]\n"
+      "Processing images : 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:14<00:00,  2.82image/s]\n",
+      "Normalizing images: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [01:16<00:00,  1.92s/image]\n",
+      "Denoising images  : 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:42<00:00,  1.05s/image]\n"
      ]
     },
     {
@@ -95,72 +95,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Detecting features   : 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████| 479/479 [03:53<00:00,  2.05image/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "QUEUEING TASKS | Matching images      :   0%|          | 0/479 [00:00<?, ?image/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PROCESSING TASKS | Matching images      :   0%|          | 0/479 [00:00<?, ?image/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "COLLECTING RESULTS | Matching images      :   0%|          | 0/479 [00:00<?, ?image/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Finding transforms   : 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████| 478/478 [00:00<00:00, 3397.58image/s]\n",
-      "Finalizing           : 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 479/479 [00:00<00:00, 12921.40image/s]\n"
+      "Detecting features   : 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [09:21<00:00, 14.05s/image]\n"
      ]
     }
    ],
    "source": [
-    "registrar = registration.Valis(slide_src_dir, dst_dir = results_dst_dir, \n",
-    "                               non_rigid_registrar_cls=None,\n",
-    "                            img_list=ordered_img_list, imgs_ordered=True)\n",
-    "rigid_registrar, non_rigid_registrar, error_df = registrar.register()\n",
-    "registrar.warp_and_merge_slides(results_dir, crop = False, drop_duplicates = False )"
+    "registrar = registration.Valis(\n",
+    "    slide_src_dir,\n",
+    "    results_dst_dir,\n",
+    "    img_list=ordered_img_list,\n",
+    "    imgs_ordered=True,\n",
+    "    image_type=\"fluorescence\",\n",
+    "    non_rigid_registrar_cls=None,\n",
+    "    resolution_xyu=(10.4, 10.4, u'\\u00B5m'),\n",
+    "    max_processed_image_dim_px=1765,\n",
+    "    max_image_dim_px=1765\n",
+    ")\n",
+    "rigid_registrar, non_rigid_registrar, error_df = registrar.register()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
