Turning chunks to 32/32/32 in omezarr

--- a/src/pipeline/notebooks/valis_test.ipynb
+++ b/src/pipeline/notebooks/valis_test.ipynb
@@ -14,6 +14,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0e2778d7-dfa1-44e4-9cdb-69e69b20fbf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#! pip install imagecodecs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "98f1b0ff",
    "metadata": {},
@@ -47,58 +57,7 @@
    "execution_count": null,
    "id": "dfe09039",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==== Converting images\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Converting images: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:02<00:00, 19.80image/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==== Processing images\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing images : 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:14<00:00,  2.82image/s]\n",
-      "Normalizing images: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [01:16<00:00,  1.92s/image]\n",
-      "Denoising images  : 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:42<00:00,  1.05s/image]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==== Rigid registration\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detecting features   : 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [09:21<00:00, 14.05s/image]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "registrar = registration.Valis(\n",
     "    slide_src_dir,\n",
@@ -111,7 +70,84 @@
     "    max_processed_image_dim_px=1765,\n",
     "    max_image_dim_px=1765\n",
     ")\n",
-    "rigid_registrar, non_rigid_registrar, error_df = registrar.register()"
+    "#rigid_registrar, non_rigid_registrar, error_df = registrar.register()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "929fb8f9-72b2-4632-9d10-902b7b171844",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Detecting features   : 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [01:09<00:00,  1.73s/image]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "QUEUEING TASKS | Matching images      :   0%|          | 0/40 [00:00<?, ?image/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "PROCESSING TASKS | Matching images      :   0%|          | 0/40 [00:00<?, ?image/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "COLLECTING RESULTS | Matching images      :   0%|          | 0/40 [00:00<?, ?image/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Finding transforms   : 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 39/39 [00:00<00:00, 1172.19image/s]\n",
+      "Finalizing           : 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:00<00:00, 2715.20image/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======== Rigid registration complete in 1.406 minutes\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "registrar = valis.serial_rigid.register_images(slide_src_dir, dst_dir=registered_slide_dst_dir, imgs_ordered=True)"
    ]
   }
  ],
